assets/css/catalogue.scss
/* ... */
section{position:relative;}
#info{
    background:white;
    color:black;
    font-family:var(--sans-serif);
    min-height:var(--main-height);
    a{color:black;}
    a:hover{color:var(--swann-blue)}
    .logo{height: 40px;}
    h2,h3{
        color: var(--swann-blue);
        font-family: var(--sans-serif);
        font-weight: 500;
        border-bottom: 1px solid var(--swann-blue);
        margin-top:70px;
        letter-spacing: -0.01em;
    }
    h2{
        font-size: 26px;
        line-height: 28px;
        padding: 9px 0px;
    }
    h3{margin-top: 81px;}
    .people {
        display:flex;
        flex-wrap:wrap;
        > div {
            margin-bottom:40px;
            width:33%;
        }
        img{
            width:100px;
            height:110px;
            object-fit:cover;
            object-position: top center;
        }
        h4{
            font-weight:400;
            font-size:1.05rem;
            margin:0px;
            letter-spacing: -0.01em;
            margin: 7px 0px;
        }
        small{ 
            font-size: 0.8rem;
            letter-spacing: -0.01em; 
            line-height:1.3; 
            display:inline-block;
        }
    }
}
.leftright{
    width:100%;
    display:flex;
    > div{
        flex:1;
        padding:40px;
    }
}
.callout, #cookieBanner{
    z-index:100;
    background: #efefef;
    padding:15px;
    border-radius:7px;
    position:fixed;
    font-family: var(--sans-serif);
    -webkit-box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.3);
    -moz-box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.3);
    box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.3);
}
#cookieBanner{
    bottom:20px;
    font-size:12px;
    color:black;
    left:50%;
    transform:translateX(-50%);
    display:flex;
    transition: bottom 300ms;
    button{
        padding-left:10px;
        text-decoration:underline;
    }
    a{
        color:black;
        text-decoration:underline;
        margin-right:20px;
        display:inline-block;
    }
}
.callout{
    font-weight: 500;
    font-size: 15px;
    line-height: 17px;
    letter-spacing: -0.02em;
    color: var(--swann-blue);
    width:140px;
    top: calc(var(--toolbar-height) - 2px);
    left: -400px;
    transition: left 300ms;
    p{margin:0px; margin-bottom:10px;}
    button{
        text-transform:uppercase;
        font-size: 10px;
        font-weight:600;
        line-height: 17px;
        letter-spacing: -0.01em;
        color:var(--swann-blue);
    }
}
.callout.visible{
    left: calc(var(--toolbar-height) + 10px);
}
.callout.visible.got-it{
    left: -400px;
}

.callout:before{
    content: '';
    background-image: url('../img/callout-arrow.svg');
    position:absolute;
    left:-16px;
    width:16px;
    height:16px;
    background-size:contain;
}
.chapter-head{
    width:100%;
    display:flex;
    flex-direction: column;
    justify-content: center;
    // background:#0f0f0f;
    // height:600px;
    border-bottom:1px;
    text-align:center;
    position: relative;
    z-index: 2;
    background: black;
    height: var(--main-height);
    h1{
        font-size:50px;
        font-weight:300;
        letter-spacing: -0.01em;
        padding:20px 0px;
        font-family: 'Jjannon Display', serif;
        text-align:center;
        display:inline-block;
        border-top:1px solid white;
        border-bottom:1px solid white;
        width:auto;
    }
    h3{
        font-size: 17px;
    }
}
.lots{
    background:black;
    position:relative;
    z-index:2;
}
/* ... */

